// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mongo can replace SetField updates 1`] = `
Map {
  "func" => FunctionDescription {
    "computation": Array [
      Object {
        "key": Array [
          Object {
            "index": 12,
            "kind": "Saved",
          },
        ],
        "kind": "SetKeyOnObject",
        "obj": "gg",
        "value": Object {
          "kind": "String",
          "value": "some val",
        },
      },
    ],
    "input": Array [],
  },
}
`;

exports[`mongo can replace existence checking 1`] = `
Map {
  "func" => FunctionDescription {
    "computation": Array [
      Object {
        "key": Object {
          "kind": "String",
          "value": "maybe",
        },
        "kind": "keyExists",
        "obj": "glob",
      },
    ],
    "input": Array [],
  },
}
`;

exports[`mongo get field with mongo specific op 1`] = `
Map {
  "func" => FunctionDescription {
    "computation": Array [
      Object {
        "key": Array [
          Object {
            "kind": "String",
            "value": "field",
          },
        ],
        "kind": "GetKeyFromObject",
        "obj": "global",
      },
    ],
    "input": Array [],
  },
}
`;
